[package]
authors = ["The rust-fuzz Project Developers"]
description = "A wrapper around LLVM's libFuzzer runtime."
edition = "2018"
license = "MIT/Apache-2.0/NCSA"
name = "libfuzzer-sys"
readme = "./README.md"
repository = "https://github.com/rust-fuzz/libfuzzer"
version = "0.3.2"

[dependencies]
arbitrary = { version = "0.4.1", optional = true }
proptest = { version = "0.9.6", optional = true}

[build-dependencies]
cc = "1.0"

[features]
default = ["arbitrary_backend"]

# there are two main crates for property testing
proptest_backend = ["proptest"]
arbitrary_backend = ["arbitrary"]

# arbitrary
arbitrary-derive = ["arbitrary/derive"]
